Fixed issue with footer not showing

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
+body {
+  font-family: "Merriweather", serif;
+}
+
 main {
   display: block;
   margin: 0 auto;
-  max-width: 800px;
+  max-width: 860px;
   margin-top: 4em;
 }
 h1,
@@ -17,29 +21,47 @@ p {
 }
 hr {
   outline: none;
-  background-color: #69b578;
+  background-color: #2c6e49;
   width: 10%;
   margin: 0 auto;
+}
+
+.navbar {
+  background-color: #38a3a5;
+}
+.navbar a {
+  font-size: 0.9em;
+}
+.navbar-nav .nav-link:hover {
+  color: #c7f9cc;
+}
+
+.myButton {
+  border: none;
+  background-color: #ffc9b9;
+  padding: 0.9em 0.9em;
+  border-radius: 0.25em;
+  margin-top: 1em;
+}
+
+.footer {
+  text-align: center;
 }
 footer svg {
   transition: color 0.5s ease-in-out;
 }
-footer svg.lucide {
-  color: #69b578;
-  width: 40px;
-  height: 40px;
-  stroke-width: 1.5px;
-}
-footer svg.lucide:hover {
-  color: blue;
-}
 footer a {
   text-decoration: none;
 }
-.navbar {
-  background-color: #69b578;
+footer svg.lucide:hover {
+  stroke: #fefee3;
 }
-.btn.btn-primary {
-  background-color: #69b578;
-  border: none;
+footer svg.lucide {
+  stroke: #2c6e49;
+  margin-top: 4em;
+  margin-left: 0.7em;
+  margin-bottom: 1em;
+  width: 2.5em;
+  height: 2.5em;
+  stroke-width: 1.5px;
 }
